--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anthropic==0.42.0
 anyio==4.7.0
 certifi==2024.12.14
+click==8.1.8
 distro==1.9.0
 exceptiongroup==1.2.2
 h11==0.14.0
@@ -9,10 +10,16 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.2
+joblib==1.4.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
+nltk==3.9.1
+openai==1.60.2
 packaging==24.2
 pillow==11.0.0
 pydantic==2.10.4
 pydantic_core==2.27.2
+Pygments==2.19.1
 pynput==1.7.7
 pyobjc-core==10.3.2
 pyobjc-framework-ApplicationServices==10.3.2
@@ -21,6 +28,9 @@ pyobjc-framework-CoreText==10.3.2
 pyobjc-framework-Quartz==10.3.2
 pytesseract==0.3.13
 python-dotenv==1.0.1
+regex==2024.11.6
+rich==13.9.4
 six==1.17.0
 sniffio==1.3.1
+tqdm==4.67.1
 typing_extensions==4.12.2
