--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,62 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anthropic==0.42.0
 anyio==4.7.0
+async-timeout==4.0.3
+attrs==25.1.0
+cachetools==5.5.2
 certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
+dataclasses-json==0.6.7
 distro==1.9.0
 exceptiongroup==1.2.2
+frozenlist==1.5.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.68.0
+grpcio==1.70.0
+grpcio-status==1.70.0
 h11==0.14.0
 httpcore==1.0.7
+httplib2==0.22.0
 httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 jiter==0.8.2
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.16
+langchain-community==0.3.16
+langchain-core==0.3.32
+langchain-openai==0.3.2
+langchain-text-splitters==0.3.5
+langsmith==0.3.2
 markdown-it-py==3.0.0
+marshmallow==3.26.0
 mdurl==0.1.2
+multidict==6.1.0
+mypy-extensions==1.0.0
 nltk==3.9.1
+numpy==1.26.4
 openai==1.60.2
+orjson==3.10.15
 packaging==24.2
 pillow==11.0.0
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.10.4
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
 pynput==1.7.7
@@ -26,11 +65,24 @@ pyobjc-framework-ApplicationServices==10.3.2
 pyobjc-framework-Cocoa==10.3.2
 pyobjc-framework-CoreText==10.3.2
 pyobjc-framework-Quartz==10.3.2
+pyparsing==3.2.1
 pytesseract==0.3.13
 python-dotenv==1.0.1
+PyYAML==6.0.2
 regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
 rich==13.9.4
+rsa==4.9
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.37
+tenacity==9.0.0
+tiktoken==0.8.0
 tqdm==4.67.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+yarl==1.18.3
+zstandard==0.23.0
